--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,5 @@
 #root {
-  width: 90%;
+  width: 100%;
   margin: 0 auto;
   /* padding: 2rem; */
   text-align: center;
@@ -24,7 +24,7 @@
 }
 
 .card {
-  padding: 2em;
+  padding: 2ems;
 }
 
 .read-the-docs {
