--- a/client/src/styles/ColumnList.scss
+++ b/client/src/styles/ColumnList.scss
@@ -2,6 +2,8 @@
   display: flex;
   width: 100%;
   margin: 0 auto;
-  padding: 0 24px;
-  height: 80%;
+  padding: 0;
+}
+.project-header {
+  color: #fff;
 }
