--- a/client/src/styles/ColumnList.scss
+++ b/client/src/styles/ColumnList.scss
@@ -6,4 +6,16 @@
 }
 .project-header {
   color: #fff;
+  background-color: #660000;
+  border-radius: 4px;
+  padding: 0 16px;
 }
+
+.project-header h1 {
+  font-size: 2.5em;
+}
+
+.project-header h3 {
+  font-size: 1.5em;
+}
+
