--- a/client/src/styles/ColumnList.scss
+++ b/client/src/styles/ColumnList.scss
@@ -6,16 +6,22 @@
 }
 .project-header {
   color: #fff;
-  background-color: #660000;
-  border-radius: 4px;
+  // background-color: #660000;
   padding: 0 16px;
 }
 
 .project-header h1 {
-  font-size: 2.5em;
+  font-size: 3em;
+  font-weight: 350;
+  font-family: monospace;
+  letter-spacing: 2px;
+  // background-color: black;
 }
 
 .project-header h3 {
   font-size: 1.5em;
+  // background-color: black;
+  font-weight: 350;
+  letter-spacing: .3px;
 }
 
